# IdentifyTheFile

./: .gitignore  Cargo.toml  README.md
identify-the-file/: Cargo.toml
identify-the-file/src/: main.rs
itf-core/: Cargo.toml  build.rs
itf-core/patterns/: mp4.json
itf-core/src/: embedded_rule.rs  file_point_calculator.rs  file_processor.rs  lib.rs  pattern.rs  pattern_handler.rs  test_utils.rs  utils.rs
itf-core/tests/byte_sequences/5/: 2.test
itf-core/tests/entropy/2/: 1.test  2.test
itf-core/tests/matching/2/: should_not_match.json
itf-core/tests/matching/3/: second_candidate.json
itf-library/: Cargo.toml  build.rs
itf-library/src/: lib.rs
itf-single/: Cargo.toml
itf-single/src/: main.rs  placeholder.json
src/: arg_parser.rs  file_point_calculator.rs  file_processor.rs  main.rs  pattern.rs  pattern_file.rs  pattern_handler.rs  utils.rs
tests/byte_sequences/4/: 2.test
tests/byte_sequences/7/: 2.test
tests/byte_sequences/8/: 2.test
tests/byte_sequences/9/: 1.test  2.test
tests/entropy/1/: 1.test
tests/matching/3/: second_candidate.json
tests/strings/3/: 1.test
tests/strings/6/: 2.test
tests/strings/7/: 2.test
tests/strings/8/: 2.test
