[package]
name = "identify_the_file"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
license = "LGPL-2.1-only"
description = "A file identifcation tool, written in Rust."
repository = "https://github.com/sciguyryan/IdentifyTheFile"
homepage = "https://github.com/sciguyryan/IdentifyTheFile"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
hashbrown = { version = "0.14.5", features = ["serde", "rayon"] }
prettytable = "0.10.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.206"
serde_derive = "1.0.207"
serde_json = "1.0.124"
simd-json = "0.13.10"
walkdir = "2.5.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
#panic = "abort"
debug = true
