[workspace]
resolver = "2"

members = ["itf-core", "identify-the-file", "itf-single"]
default-members = ["itf-core", "identify-the-file", "itf-single"]

[workspace.dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.16", features = ["derive"] }
hashbrown = { version = "0.14.5", features = ["serde", "rayon"] }
prettytable = "0.10.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = "1.0.208"
serde_derive = "1.0.208"
serde_json = "1.0.125"
simd-json = "0.13.10"
walkdir = "2.5.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
#panic = "abort"
#debug = true
#codegen-units = 1
