[workspace]
resolver = "2"

members = ["itf-core", "identify-the-file", "itf-single"]
default-members = ["itf-core", "identify-the-file"]

[workspace.dependencies]
clap = { version = "4.5.36", features = ["derive"] }
flate2 = "1.1.1"
hashbrown = { version = "0.15.2", features = ["serde", "rayon"] }
lazy_static = "1.5.0"
prettytable = "0.10.0"
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
serde = "1.0.210"
serde_derive = "1.0.219"
serde_json = "1.0.140"
simd-json = "0.15.1"
walkdir = "2.5.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
#panic = "abort"
#debug = true
#codegen-units = 1
