[package]
name = "itf-core"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
license = "LGPL-2.1-only"
description = "A pattern-based file identifcation library, written in Rust."
repository = "https://github.com/sciguyryan/IdentifyTheFile"
homepage = "https://github.com/sciguyryan/IdentifyTheFile"

[dependencies]
chrono.workspace = true
hashbrown.workspace = true
memchr.workspace = true
rand.workspace = true
rayon.workspace = true
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
simd-json.workspace = true
walkdir.workspace = true
