[package]
name = "itf-library"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
license = "LGPL-2.1-only"
description = "The ITF pattern library, written in Rust."
repository = "https://github.com/sciguyryan/IdentifyTheFile"
homepage = "https://github.com/sciguyryan/IdentifyTheFile"
build = "build.rs"

[dependencies]
lazy_static.workspace = true
serde_json.workspace = true
regex.workspace = true

[build-dependencies]
lazy_static.workspace = true
serde_json.workspace = true
