[package]
name = "itf-single"
version = "0.1.0"
authors = ["Ryan Jones-Ward <sciguyryan@gmail.com>"]
edition = "2021"
license = "LGPL-2.1-only"
description = "A targetted single file-type identification tool builder, written in Rust."
repository = "https://github.com/sciguyryan/IdentifyTheFile"
homepage = "https://github.com/sciguyryan/IdentifyTheFile"

[dependencies]
itf-core = { path = "../itf-core" }
